Add: ItemServiceImpl fix